# Matxin

branches/matxin-CG/: configure.ac
branches/matxin-CG/src/: Analyzer.cc  LT.cc  Makefile.am  ST_intra.cc  ST_verb.cc
branches/matxin-engine/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
branches/matxin-engine/autom4te.cache/: output.1  requests  traces.0  traces.1
branches/matxin-engine/src/: MG.cc  Makefile.am  Makefile.in  SG_inter.cc  SG_intra.cc  ST_inter.cc  ST_prep.cc  matxin_gen_morph.cc  matxin_lexfer.cc  matxin_xfer_lex.cc  matxin_xfer_prep.cc
trunk/: AUTHORS  INSTALL  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure  configure.ac  matxin.pc.in
trunk/data/: Makefile.am  Makefile.in
trunk/data/config/: Makefile.in  en-eu.cfg  es-eu.cfg
trunk/data/dict/: Makefile.in
trunk/data/dict/en-eu/: Makefile.am  Makefile.in  eneu_chunk_type.txt  eneu_prep.txt  eu_changes_morph.xml  eu_changes_morph_mur.xml  eu_measures_gen.xml
trunk/data/dict/es-eu/: Makefile.am  Makefile.in  eseu.xml  eseu_chunk_type.txt  eseu_prep.txt  eu_changes_morph.xml  eu_measures_gen.xml  eu_sem.txt
trunk/data/freeling/: Makefile.in
trunk/data/freeling/common/: Makefile.in
trunk/data/freeling/common/nec/: Makefile.in
trunk/data/freeling/en/: Makefile.in
trunk/data/freeling/en/chunker/: Makefile.am  Makefile.in
trunk/data/freeling/en/dep/: Makefile.in
trunk/data/freeling/en/nec/: Makefile.in
trunk/data/freeling/es/: Makefile.am  Makefile.in
trunk/data/freeling/es/dep/: Makefile.in
trunk/data/freeling/es/nec/: Makefile.in
trunk/data/gram/: Makefile.in
trunk/data/gram/en-eu/: Makefile.in  eneu_verb_transfer.fst
trunk/data/gram/es-eu/: Makefile.in  eseu_verb_transfer.fst
trunk/src/: Analyzer.C  Analyzer.cc  Freeling_server.C  LT.C  LT.cc  MG.C  MG.cc  Makefile.am  Makefile.in  SG_inter.C  SG_inter.cc  SG_intra.C  SG_intra.cc  ST_inter.C  ST_inter.cc  ST_intra.C  ST_intra.cc  ST_prep.C  ST_prep.cc  ST_verb.C  ST_verb.cc  Server_Analyzer.C  XML_reader.C  XML_reader.cc  XML_reader.h  config.h  data_manager.C  data_manager.cc  data_manager.h  deformat.xsl  gen_Matxin_translator.sh  gen_fst2regex.sh  html-deformat.C  html-format.xml  matxin_string_utils.c  matxin_string_utils.h  reFormat.C  reFormat.cc  rtf-deformat.C  string_utils.cc  (+2 more)
