freelingenchunkerdir = $(pkgdatadir)/freeling/en/chunker
freelingenchunker_DATA = appendix.PRP \
                         conjuncions.dat \
                         dicc.vbmodals \
                         grammar.dat \
                         list.PDTssg \
                         Makefile.am \
                         nexes.mixtos \
                         nexes.parentetics \
                         nexes.preposicionals \
                         nexes.subordinants \
                         sn-chunkPRP.data \
                         sn-chunkPRPsdet.data \
                         WH-words.dat
